2011-XX-XX  Peter Schueller  <ps@kr.tuwien.ac.at>

	Most important changes (i.e., the reason for the new version):

	* TODO details [rewrote model building according to LPNMR2011 paper: new dependency notion, evalgraph, evaluation heuristics, ...]
	* evaluation heuristics selectable with --heuristics=...

	Plugin API changes:

	* Plugins must now return PluginAtomPtrs/PluginConverterPtrs/... that use
	a "deleter" compiled into the respective plugin (see PluginInterface.h)
	* New central auxiliary constant management method in Registry:
	getAuxiliaryConstantSymbol(), PluginAtom no longer manages its auxiliaries.
	* added comfortable "text-only no-registry-ID-trouble" (and slow) plugin interface ComfortPluginInterface.hpp
	* Plugins may now provide an alternative HEX parser by overriding createParser()

	Testing and debugging additions:

	* New Logger component with log-levels, hierarchical indentation and
	NDEBUG-dependent logging.
	* Printhelpers.hpp utilities for comfortable printing of various boost
	and STL containers.
	* testsuite/run-dlvhex-tests.sh: Added possibility for negative testcases.
	(See comments in trunk/run-dlvhex-tests.sh for some documentation.)
	* testsuite/answerset_compare.py: New script for real set-comparison for
	verifying answer-sets (previously the order of answer sets mattered).
	* src/dlvhex/gdbdlvhex.sh: Added shellscript to use gdb with
	libtool-built uninstalled binary.
	* src/dlvhex/valgrinddlvhex.sh: Likewise for valgrind.
	* New testcase notwellfounded2.hex for guess and check model builder
	(should test minimality of disjunctions, this test crashes dlvhex trunk/)

	Other (smaller) additions:

	* Prototype support for clingo as backend ASP solver (aggregates and some
	builtins probably do not work correctly yet - please file a Trac issue or
	drop the maintainers an email if you need some feature).
	* Added static linking test for testsuite TestPlugin.
	* Added commandline option for keeping auxiliary predicates in output.