@@ -1,0 +1,1 @@
+0 grep "is cautiously false, evidenced by" |wc -l |grep -qx 2
